--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-background-fetch": "~13.1.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
