--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-leaflet": "^0.0.0-reserved",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -48,7 +49,7 @@
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
