--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,31 @@
 [build]
   publish = "web-build"
-  command = "echo 'PWA já construída'"
+  command = "npm run build-web"
 
 [build.environment]
   NODE_VERSION = "18"
 
+# =====================================================
+# REDIRECTS PARA SPA (SINGLE PAGE APPLICATION)
+# =====================================================
+
+# Redirecionar todas as rotas para index.html (exceto arquivos estáticos)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
 
-[[headers]]
-  for = "/sw.js"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
+# Redirecionar rotas específicas da API para o backend
+[[redirects]]
+  from = "/api/*"
+  to = "https://seu-backend.vercel.app/api/:splat"
+  status = 200
+  force = true
 
-[[headers]]
-  for = "/manifest.json"
-  [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
+# =====================================================
+# HEADERS DE SEGURANÇA
+# =====================================================
 
 [[headers]]
   for = "/*"
@@ -27,14 +34,55 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
-# Configuração específica para PWA
+# =====================================================
+# HEADERS PARA PWA
+# =====================================================
+
 [[headers]]
-  for = "/"
+  for = "/manifest.json"
   [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
+    Content-Type = "application/manifest+json"
+
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+    Content-Type = "application/javascript"
 
 [[headers]]
   for = "/index.html"
   [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
+
+# =====================================================
+# HEADERS PARA ASSETS
+# =====================================================
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# =====================================================
+# FUNÇÕES NETLIFY (OPCIONAL)
+# =====================================================
+
+[functions]
+  directory = "netlify/functions"
+
+# =====================================================
+# CONFIGURAÇÕES DE FORMS
+# =====================================================
+
+[[redirects]]
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
