--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build-web": "node ./scripts/build-web.js",
+    "build-netlify": "bash ./netlify-build.sh",
+    "deploy-netlify": "npm run build-netlify && netlify deploy --prod --dir=web-build"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
